# indiestudio

./: .gitignore  Basic.map  CMakeCache.txt  CMakeLists.txt  FindIrrlicht.cmake  Makefile  README.md  ThirdPersonWalk_PreviewMesh.fbx  cmake_install.cmake  indiestudio.cbp  indiestudio.sln  indiestudio.vcxproj  indiestudio.vcxproj.filters
assets/Bomb/: readme.txt
assets/Bomberman/: Bomberman.blend  Bomberman.mtl
assets/IrrFont/: cancer.xml
assets/bomb/: bomb.mtl
assets/bomb/CryoMineGlove/: CryoMine.mtl  CryoMineGlove.mtl
assets/box/: DefaultGround.mtl  SciFiCrate.mtl  SciFiCrateCGT.ply  box.mtl
assets/box_test/: SciFiCrate.fbx  SciFiCrate.x3d  box_test.mtl
assets/city/: city.mtl
assets/cube/: Cube.mtl
assets/dl_assets/grenade/: Grendnenda.blend  OBJ.rar
assets/grenade/: Grendnenda.mtl
assets/ground/: ground.mtl
assets/maps/: Basic.map
assets/player/: player.3ds
assets/powerup/: powerup.mtl  powerup_capacity.mtl  powerup_shortfuse.mtl  powerup_speed.mtl  powerup_strength.mtl
assets/script/: brain_logic.lua
assets/wall/: wall.mtl
cmake/: External_ZLIB.cmake  FindBoost.cmake  FindIrrlicht.cmake  Findassimp.cmake
dependencies/assimp/lib/pkgconfig/: assimp.pc
dependencies/assimp_dl/Stamp/assimp/: assimp-urlinfo.txt  download-assimp.cmake  extract-assimp.cmake
dependencies/assimp_dl/tmp/assimp/: assimp-cfgcmd.txt
irrlicht-1.8.4/examples/01.HelloWorld/: Makefile
irrlicht-1.8.4/media/: settings.xml
media/: awp_india.mtl
no_delete_cmake_module/: FindBoost.cmake
src/: AEntity.cpp  AEntity.hh  AEventReceiver.cpp  AEventReceiver.hh  Action.cpp  Action.hh  Bomb.cpp  Bomb.hh  BomberMan.cpp  BomberMan.hh  Cell.cpp  Cell.hh  Character.cpp  Character.hh  Core.cpp  Core.hh  Error.cpp  Error.hh  EventHandler.cpp  EventHandler.hh  EventReceiver.cpp  EventReceiver.hh  Game.cpp  Game.hh  IScene.cpp  IScene.hh  LEventReceiver.cpp  LEventReceiver.hh  Logger.cpp  Logger.hh  Map.cpp  Map.hh  MenuGamePause.cpp  MenuGamePause.hh  MenuMainPage.cpp  MenuMainPage.hh  MenuSettingsPage.cpp  MenuSettingsPage.hh  Player.cpp  Player.hh  (+17 more)
src/Animation/: BombEffects.cpp  BombEffects.hh  Explosion.cpp  Explosion.hh  IAnimation.hh  IEffect.hh  InternalExplosion.cpp  InternalExplosion.hh  Spawn.cpp  Spawn.hh  SpecialEffectManager.cpp  SpecialEffectManager.hh  Timer.cpp  Timer.hh  UniformExplosion.cpp  UniformExplosion.hh
src/Animations/: Explosion.cpp  Explosion.hh  InternalExplosion.cpp  InternalExplosion.hh  Spawn.cpp  Spawn.hh  SpecialEffectManager.cpp  SpecialEffectManager.hh  Timer.cpp  Timer.hh
src/BomberMan/: AEntity.cpp  AEntity.hh  Action.cpp  Action.hh  Bomb.cpp  Bomb.hh  Cell.cpp  Character.cpp  Character.hh  IA.cpp  IA.hh  IPlayer.hh  Map.cpp  Map.hh  Player.cpp  Player.hh  PlayerNode.cpp  PlayerNode.hh  PowerUp.cpp  PowerUp.hh  PowerUpNode.cpp  PowerUpNode.hh  Referee.cpp  Referee.hh  Save.cpp  Save.hh  brain_logic.lua  brain_logic.py
src/Core/: Dir.cpp  Dir.hh  EventHandler.cpp  EventHandler.hh  Game.cpp  GameDir.cpp  GameDir.hh  Logger.cpp  ResourceManager.cpp  ResourceManager.hh  Save.cpp  Save.hh  Settings.cpp  Settings.hh  main.cpp
src/Network/: Client.cpp  Client.hh  Server.cpp  Server.hh  tcp_client.cpp  tcp_client.hh  tcp_connection.cpp  tcp_connection.hh  tcp_server.cpp  tcp_server.hh  udp_client.cpp  udp_client.hh  udp_server.cpp  udp_server.hh
src/Particles/: Explosion.cpp  Explosion.hh  Spawn.cpp  Spawn.hh
src/Player/: Player.cpp
src/Scenes/: DemoScene.cpp  DemoScene.hh  IScene.hh  MenuCreditPage.cpp  MenuCreditPage.hh  MenuGameMode.cpp  MenuGameMode.hh  MenuGamePause.cpp  MenuGamePause.hh  MenuLocalGame.cpp  MenuLocalGame.hh  MenuMainPage.cpp  MenuMainPage.hh  MenuSettingsPage.cpp  MenuSettingsPage.hh  SceneGame.cpp  SceneGame.hh  SplashScreen.cpp  SplashScreen.hh
test_cmake/: CMakeLists.txt
test_cmake/include/: toto.hh
test_cmake/src/: main.cpp
